# RavenClient

./: .gitignore  README.md  pyproject.toml
app/: client.py  data.py  main.py
app/api/: wolfram.py
app/db/: db.py
app/error/: database.py
app/llm/: __init__.py  llm_post_request.py  llm_requester.py  openai.py  requester.py
app/model/: __init__.py  constants.py  data.py  session.py  user.py
app/models/: constants.py  data.py
app/route/: __init__.py  auth.py  llm.py
app/util/: auth.py  file.py  image.py
app/utils/: file.py  path.py
frontend/: package.json  pnpm-lock.yaml
