[project]
name = "raven-client"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.2",
    "openai>=1.78.0",
    "urllib3>=2.4.0",
    "requests>=2.32.3",
    "numpy>=2.2.5",
    "aiohttp>=3.11.18",
    "toml>=0.10.2",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.40",
    "bcrypt>=4.3.0",
    "aiosqlite>=0.21.0",
    "Pillow>=11.2.1"
]

[tool.setuptools]
packages = ["app"]